...
      })
      
      let ChoseImageFromLibraryAction = UIAlertAction(title: "ライブラリから選択", style: .default, handler: { (action: UIAlertAction!) -> Void in
         print("")
      })
      
      let CancelAction = UIAlertAction(title: "キャンセル", style: .cancel, handler: { (action: UIAlertAction!) -> Void in
         print("")
      })
      
      Alert.addAction(DeletImageAction)
      Alert.addAction(TakeImageAction)
      Alert.addAction(ChoseImageFromLibraryAction)
      Alert.addAction(CancelAction)
      
   }
   
    @objc func OpenActionSheetNotSellectedImageCatchNotification(notification: Notification) ->Void {
      let Alert = UIAlertController(title: "(name)の写真を登録", message: nil, preferredStyle: .actionSheet)
      
      let TakeImageAction = UIAlertAction(title: "写真を撮る", style: .default, handler: { (action: UIAlertAction!) -> Void in
         print("")
      })
      
      let ChoseImageFromLibraryAction = UIAlertAction(title: "ライブラリから選択", style: .default, handler: { (action: UIAlertAction!) -> Void in
...
