...
import ChameleonFramework
import SCLAlertView
import SnapKit

class ChildCanDoMainViewController: UIViewController {
   
   var CanDoRegiButton = UIButton()
   var CanDoSeeButton = UIButton()
      
   override func viewDidLoad() {
      super.viewDidLoad()
      InitViewSetting()
      SetUpNavigationItemSetting()
      
...
